req3 table th alignment fix

--- a/webapp/src/main/webapp/src/primeng-overrides.less
+++ b/webapp/src/main/webapp/src/primeng-overrides.less
@@ -331,9 +331,14 @@ body .ui-tabview.ui-tabview-top .ui-tabview-nav li.ui-state-default a {
 body .ui-tabview.ui-tabview-top .ui-tabview-nav li.ui-state-default {
   margin-right: 8px;
 }
+
 .table tr th.level-up,
 .table tr td.level-up {
   background-image: none;
+}
+.ui-table .ui-table-thead > tr > th.level-down,
+.ui-table .ui-table-tbody > tr > td.level-down th.level-down.ng-star-inserted {
+  padding-left: 8px !important;
 }
 .table tr th.level-down:before {
   display: none;
